trying to fix text overflow in card text divs

--- a/app/assets/stylesheets/card_styles.css
+++ b/app/assets/stylesheets/card_styles.css
@@ -1,7 +1,3 @@
-.is-a {
-  display: inline-block;
-}
-
 .card-buttons button {
   display: inline-block;
   margin-top: 15px;
@@ -62,7 +58,6 @@
   text-align: left;
   background-color : #F7F778;
   height: 80px;
-  /*overflow: hidden;*/
   font-size: 30px;
   padding: 10px;
   line-height: 30px;
